# Landgoed-Blom

./: .gitignore  README.md  pyproject.toml  update-users.py  update_users.py
.github/workflows/: update-users.yaml
nextcloud/: auth.py  mail_server.py  master_userlist.py  nextcloud_server.py  users.py
templates/users/: create.md
tests/: test_master_userlist.py  test_send_mail.py  test_users.py
