[tool.landgoed-blom]
# Nextcloud internal url for self-managed user list
server_url = "https://nx52347.your-storageshare.de"
user_list_file_id = "12035"
user = "Admin"

[tool.poetry]
name = "landgoed-blom"
version = "0.1.0"
description = "Automation scripts for Landgoed Blom"
authors = ["Pioniersgroep Landgoed Blom <pioniersgroep@buitenhuisblom.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
