[tool.landgoed-blom]
# Nextcloud internal url for self-managed user list
server_url = "https://nx52347.your-storageshare.de"
user_list_file_id = "12035"
user_list_file_path = "Centrale Kring/Gebruikers Pioniersgroep.xlsx"
user = "Admin"
smtp_username = "pioniersgroep@buitenhuisblom.nl"
smtp_server = "buitenhuisblom.nl"
# Use port 587 for TLS, 465 for SSL
smtp_port = 465

[tool.poetry]
name = "landgoed-blom"
version = "0.1.0"
description = "Automation scripts for Landgoed Blom"
authors = ["Pioniersgroep Landgoed Blom <pioniersgroep@buitenhuisblom.nl>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pandas-stubs = "^2.2.3.241009"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
# Enable strict type checking mode
strict = true